# axum-sqlx-ddd-example

./: README.md
todo-app/: Cargo.toml  README.md  docker-compose.yml
todo-app/application/: Cargo.toml
todo-app/application/src/: lib.rs  usecase.rs
todo-app/application/src/session/: session_store.rs
todo-app/domain/src/: aggregate_root.rs
todo-app/domain/src/aggregate_root/todo/entity/: todo.rs
todo-app/domain/src/aggregate_root/todo/value_object/: todo_title.rs
todo-app/domain/src/aggregate_root/user/repository/: user_repository.rs
todo-app/domain/src/aggregate_root/user/value_object/: user_name.rs
todo-app/domain/src/aggregate_root/user_credential/: repository.rs
todo-app/domain/src/aggregate_root/user_credential/repository/: user_credential_repository.rs
todo-app/domain/src/aggregate_root/user_credential/value_object/: password.rs  password_hash.rs
todo-app/domain/src/database/: repositories.rs  transaction.rs
todo-app/infrastructure/: Cargo.toml
todo-app/infrastructure/src/postgres/database/: pg_db.rs
todo-app/infrastructure/src/postgres/repository/: pg_user_credential_repository.rs  pg_user_repository.rs
todo-app/infrastructure/src/redis/: redis_session_store.rs
todo-app/migrations/: 20220613111421_create-tables.sql
todo-app/presentation/: Cargo.toml
todo-app/presentation/src/handler/: signup_handler.rs
todo-app/src/: application.rs  domain.rs  main.rs  usecase.rs
todo-app/src/application/: dependency.rs  session.rs
todo-app/src/application/session/: session_id.rs  session_store.rs
todo-app/src/application/usecase/: login_usecase.rs  signup_usecase.rs
todo-app/src/domain/: database.rs  error.rs
todo-app/src/domain/aggregate_root/todo/: value_object.rs
todo-app/src/domain/aggregate_root/todo/entity/: todo.rs
todo-app/src/domain/aggregate_root/todo/repository/: todo_repository.rs
todo-app/src/domain/aggregate_root/user/: entity.rs  value_object.rs
todo-app/src/domain/aggregate_root/user/entity/: user.rs
todo-app/src/domain/aggregate_root/user/repository/: user_repository.rs
todo-app/src/domain/aggregate_root/user/value_object/: user_id.rs  user_name.rs
todo-app/src/domain/aggregate_root/user_credential/: entity.rs
todo-app/src/domain/aggregate_root/user_credential/entity/: user_credential.rs
todo-app/src/domain/aggregate_root/user_credential/repository/: user_credential_repository.rs
todo-app/src/domain/aggregate_root/user_credential/value_object/: email.rs  password.rs  password_hash.rs
todo-app/src/domain/database/: db.rs  repositories.rs  transaction.rs
todo-app/src/domain/error/: validation_error.rs
todo-app/src/domain/todo/: repository.rs
todo-app/src/domain/todo/entity/: todo.rs
todo-app/src/domain/todo/repository/: todo_repository.rs
todo-app/src/domain/todo/value_object/: todo_id.rs  todo_title.rs
todo-app/src/domain/user/: entity.rs
todo-app/src/domain/user/entity/: user.rs
todo-app/src/domain/user/repository/: user_repository.rs
todo-app/src/domain/user/value_object/: user_id.rs
todo-app/src/domain/user_credential/: entity.rs  repository.rs  value_object.rs
todo-app/src/domain/user_credential/entity/: user_credential.rs
todo-app/src/domain/user_credential/repository/: user_credential_repository.rs
todo-app/src/domain/user_credential/value_object/: email.rs  password.rs  password_hash.rs
todo-app/src/infrastructure/: dependency.rs
todo-app/src/infrastructure/database/: connection.rs
todo-app/src/infrastructure/database/repository/: pg_user_credential_repository.rs  pg_user_repository.rs
todo-app/src/infrastructure/postgres/: database.rs
todo-app/src/infrastructure/postgres/database/: pg_connection.rs  pg_db.rs  pg_transaction.rs
todo-app/src/infrastructure/postgres/repository/: pg_user_credential_repository.rs  pg_user_repository.rs
todo-app/src/infrastructure/redis/: redis_session_store.rs
todo-app/src/presentation/: handle.rs  handler.rs
todo-app/src/presentation/handle/: login_handle.rs  signup_handle.rs
todo-app/src/presentation/handler/: login_handler.rs  signup_handler.rs
todo-app/src/usecase/: add_todo_usecase.rs  change_todo_title_usecase.rs  change_user_name_usecase.rs  remove_todo_usecase.rs  signup_usecase.rs
todo-app/todo-app/: Cargo.toml
todo-app/todo-app-application/: Cargo.toml
todo-app/todo-app-application/src/: lib.rs  usecase.rs
todo-app/todo-app-application/src/database/: db.rs  repositories.rs
todo-app/todo-app-application/src/session/: session_id.rs
todo-app/todo-app-application/src/usecase/: error.rs  login_usecase.rs  signup_usecase.rs
todo-app/todo-app-domain/: Cargo.toml
todo-app/todo-app-domain/src/: error.rs  lib.rs  macros.rs
todo-app/todo-app-domain/src/aggregate_root/todo/entity/: todo.rs
todo-app/todo-app-domain/src/aggregate_root/todo/repository/: todo_repository.rs
todo-app/todo-app-domain/src/aggregate_root/todo/value_object/: todo_id.rs  todo_title.rs
todo-app/todo-app-domain/src/aggregate_root/user/entity/: user.rs
todo-app/todo-app-domain/src/aggregate_root/user/repository/: user_repository.rs
todo-app/todo-app-domain/src/aggregate_root/user/value_object/: user_id.rs  user_name.rs
todo-app/todo-app-domain/src/error/: repository_error.rs  validation_error.rs
todo-app/todo-app-infrastructure/: Cargo.toml
todo-app/todo-app-infrastructure/src/: redis.rs
todo-app/todo-app-infrastructure/src/postgres/: repository.rs
todo-app/todo-app-infrastructure/src/postgres/database/: pg_db.rs  pg_transaction.rs
todo-app/todo-app-infrastructure/src/postgres/repository/: pg_user_credential_repository.rs  pg_user_repository.rs
todo-app/todo-app-infrastructure/src/redis/: session.rs
todo-app/todo-app-infrastructure/src/redis/session/: redis_session_store.rs
todo-app/todo-app-presentation/: Cargo.toml
todo-app/todo-app-presentation/src/: handler.rs  lib.rs  response.rs  session.rs
todo-app/todo-app-presentation/src/handler/: error.rs  login_handler.rs
todo-app/todo-app-presentation/src/session/: error.rs  session_id.rs  session_store.rs
todo-app/todo-app/src/: main.rs
(+5 files in other folders)
