[package]
name = "todo-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.56"
axum = { version = "0.5.7", features = ["headers"] }
chrono = "0.4.19"
serde = { version = "1.0.137", features = ["derive"] }
thiserror = "1.0.31"
tokio = { version = "1.19.2", features = ["full"] }
uuid = { version = "1.1.1", features = ["serde", "v4"] }
