[package]
name = "todo-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.4.0"
async-trait = "0.1.56"
axum = { version = "0.5.7", features = ["headers"] }
chrono = "0.4.19"
mockall = "0.11.1"
nameof = "1.2.2"
rand_core = { version = "0.6.3", features = ["std"] }
regex = "1.5.6"
serde = { version = "1.0.137", features = ["derive"] }
sqlx = { version = "0.5.13", features = ["postgres", "uuid", "runtime-tokio-native-tls"] }
thiserror = "1.0.31"
tokio = { version = "1.19.2", features = ["full"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.11"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
validator = { version = "0.15.0", features = ["derive"] }

[dev-dependencies]
maplit = "1.0.2"
mockall = "0.11.1"
