[package]
name = "todo-app"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "application",
    "domain",
    "infrastructure",
    "presentation",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.7", features = ["headers"] }
redis = { version = "0.21.5", features = ["tokio-comp"] }
sqlx = { version = "0.5.13", features = ["postgres", "uuid", "runtime-tokio-native-tls"] }
todo-app-application = { path = "./application" }
todo-app-domain = { path = "./domain" }
todo-app-infrastructure = { path = "./infrastructure" }
todo-app-presentation = { path = "./presentation" }
tokio = { version = "1.19.2", features = ["full"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.11"

[dev-dependencies]
