[package]
name = "todo-app-presentation"
version = "0.1.0"
edition = "2021"


[dependencies]

async-trait = "0.1.56"
axum = { version = "0.5.7", features = ["headers"] }
serde = { version = "1.0.137", features = ["derive"] }
thiserror = "1.0.31"
todo-app-application = { path = "../application" }
todo-app-domain = { path = "../domain" }
tokio = { version = "1.19.2", features = ["full"] }
