[package]
name = "todo-app-domain"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.4.0"
async-trait = "0.1.56"
getset = "0.1.2"
mockall = "0.11.1"
rand_core = { version = "0.6.3", features = ["std"] }
regex = "1.5.6"
serde = { version = "1.0.137", features = ["derive"] }
thiserror = "1.0.31"
ulid = { version = "0.5.0", features = ["uuid"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
validator = { version = "0.15.0", features = ["derive"] }

[dev-dependencies]
maplit = "1.0.2"
mockall = "0.11.1"
