[package]
name = "todo-app-infrastructure"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.57"
async-trait = "0.1.56"
redis = { version = "0.21.5", features = ["tokio-comp"] }
serde = { version = "1.0.137", features = ["derive"] }
sqlx = { version = "0.5.13", features = ["postgres", "uuid", "runtime-tokio-native-tls"] }
todo-app-application = { path = "../todo-app-application" }
todo-app-domain = { path = "../todo-app-domain" }
tokio = { version = "1.19.2", features = ["full"] }
