[package]
name = "todo-app-infrastructure"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.56"
nameof = "1.2.2"
redis = { version = "0.21.5", features = ["tokio-comp"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
sqlx = { version = "0.5.13", features = ["postgres", "uuid", "runtime-tokio-native-tls"] }
todo-app-application = { path = "../todo-app-application" }
todo-app-domain = { path = "../todo-app-domain" }
todo-app-presentation = { path = "../todo-app-presentation" }
tokio = { version = "1.19.2", features = ["full"] }
uuid = "0.8.2"
