[package]
name = "todo-app-presentation"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.57"
async-trait = "0.1.56"
axum = { version = "0.5.7", features = ["headers"] }
serde = { version = "1.0.137", features = ["derive"] }
thiserror = "1.0.31"
todo-app-application = { path = "../todo-app-application" }
todo-app-domain = { path = "../todo-app-domain" }
tokio = { version = "1.19.2", features = ["full"] }
tower-cookies = "0.7.0"
ulid = { version = "0.5.0", features = ["uuid"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
