[package]
name = "todo-app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.5.10", features = ["headers"] }
redis = { version = "0.21.5", features = ["tokio-comp"] }
sqlx = { version = "0.6.0", features = ["postgres", "uuid", "runtime-tokio-native-tls"] }
todo-app-application = { path = "../todo-app-application" }
todo-app-domain = { path = "../todo-app-domain" }
todo-app-infrastructure = { path = "../todo-app-infrastructure" }
todo-app-presentation = { path = "../todo-app-presentation" }
tokio = { version = "1.19.2", features = ["full"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
